feat: added endpoint for measurements notifications (#17)
* feat: added endpoint for measurements notifications

* Update test-api/telegram-messages.test.ts


* Update test-api/telegram-messages.test.ts


* fix: updated swagger to contains measurements message content

* fix: updated parameters in swagger measurements can send endpoint

* refactor: removed redudand import

---------
