# db/model/measurementMessage.ts
@@ -1,0 +1,5 @@
+import { model } from 'mongoose'
+
+const Model = model('Measurement Messages', schemaMeasurementMessage)
+
+export default Model
